lustre/target/tgt_handler.c
@@ -1878,7 +1878,7 @@ static void dump_all_bulk_pages(struct obdo *oa, int count,
 		kunmap(local_nb[i].lnb_page);
 	}
 
-	rc = ll_vfs_fsync_range(filp, 0, LLONG_MAX, 1);
+	rc = vfs_fsync_range(filp, 0, LLONG_MAX, 1);
 	if (rc)
 		CERROR("%s: sync returns %d\n", dbgcksum_file_name, rc);
 	filp_close(filp, NULL);
